feat: Базовая инициализация

--- a/src/scss/abstracts/variables/_color.scss
+++ b/src/scss/abstracts/variables/_color.scss
@@ -1,5 +1,7 @@
 // Цветовая палитра блоков
-$palette-white: #ffffff;
+$palette-main: #ffffff;
+$palette-footer: #f9fcff;
 
 // Цветовая палитра текста
-$text-black: #0a0a19;
+$text-black: #181818;
+$text-gray: #969696;
