--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,7 +2,6 @@
 // В этом файле подключаются все шрифты через font-face, если таковые есть
 // -----------------------------------------------------------------------------
 
-@include font-face('Roboto', '../fonts/roboto/Roboto-Light', 300);
-@include font-face('Roboto', '../fonts/roboto/Roboto-Regular', 400);
-@include font-face('Roboto', '../fonts/roboto/Roboto-Medium', 500);
-@include font-face('Roboto', '../fonts/roboto/Roboto-Bold', 700);
+@include font-face('Rubik', '../fonts/Rubik/Rubik-Regular', 400);
+@include font-face('Rubik', '../fonts/Rubik/Rubik-Medium', 500);
+@include font-face('Rubik', '../fonts/Rubik/Rubik-Bold', 700);
