--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,6 +2,18 @@
 // В этом файле стили типографии для всех элементов страницы
 // -----------------------------------------------------------------------------
 
+html {
+  font-size: 16px;
+}
+
 body {
-  font-family: Roboto, sans-serif;
+  font-family: Rubik, sans-serif;
+}
+
+p {
+  font-size: $text-size--medium;
+}
+
+@media (hover: hover) {
+
 }
