--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+@charset "UTF-8";
 
 // 0. Подключение первичных стилей
 @import "vendors/normalize";
@@ -28,4 +28,3 @@
 
 // 6. Подключение стилей разметки
 @import "layout/layout";
-
