feat: Верстка шапки

--- a/src/scss/abstracts/variables/_color.scss
+++ b/src/scss/abstracts/variables/_color.scss
@@ -5,3 +5,5 @@ $palette-footer: #f9fcff;
 // Цветовая палитра текста
 $text-black: #181818;
 $text-gray: #969696;
+$text-white: #ffffff;
+$text-yellow: #ecc731;
