--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -7,5 +7,8 @@
 @import "common/nav";
 @import "common/footer";
 
+// Фрагметы отдельных блоков
+@import "blocks/main";
+
 // Фрагметы главной страницы
 @import "pages/main/section.scss";
