--- a/src/scss/layout/common/_header.scss
+++ b/src/scss/layout/common/_header.scss
@@ -3,9 +3,34 @@
 // -----------------------------------------------------------------------------
 
 #header {
-
+  padding: 15px 0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .header {
+  display: flex;
+  align-items: center;
 
+  &__logo {
+    margin-right: 60px;
+
+    @include breakpoint($breakpoint-laptop--large) {
+      margin-right: 40px;
+    }
+  }
+
+  &__callback {
+    display: flex;
+    align-items: center;
+
+    margin-left: auto;
+  }
+
+  &__phone {
+    font-size: $text-size--large;
+
+    @include breakpoint($breakpoint-laptop--large) {
+      font-size: $text-size--medium;
+    }
+  }
 }
