feat: доработка хедера

--- a/src/scss/abstracts/variables/_color.scss
+++ b/src/scss/abstracts/variables/_color.scss
@@ -1,9 +1,12 @@
+// Цветовая палитра сайта
+$palette-yellow: #ecd031;
+
 // Цветовая палитра блоков
-$palette-main: #ffffff;
-$palette-footer: #f9fcff;
+$section-primary: #ffffff;
+$section-secondary: #f9fcff;
 
 // Цветовая палитра текста
-$text-black: #181818;
+$text-black: #272727;
 $text-gray: #969696;
 $text-white: #ffffff;
-$text-yellow: #ecc731;
+$text-yellow: #ecd031;
