--- a/src/scss/abstracts/variables/_common.scss
+++ b/src/scss/abstracts/variables/_common.scss
@@ -1,2 +1,6 @@
 // Максимальная ширина контейнера
 $container-max-width: 1180px;
+
+// Анимации смены стилей
+$transition__text: 0.2s ease;
+$transition__icon: 0.2s ease;
