--- a/src/scss/components/button/_main.scss
+++ b/src/scss/components/button/_main.scss
@@ -4,8 +4,8 @@
 // -----------------------------------------------------------------------------
 
 
-$button-outline__border: 2px solid #ecc731;
-$button-outline__hover: #ecc731;
+$button-outline__border: 2px solid $palette-yellow;
+$button-outline__hover: $palette-yellow;
 
 @import "button";
 @import "button-outline";
