--- a/src/scss/layout/common/_header.scss
+++ b/src/scss/layout/common/_header.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 #header {
-  padding: 15px 0;
+  padding: 20px 0;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -12,11 +12,11 @@
   align-items: center;
 
   &__logo {
-    margin-right: 60px;
+    margin-right: 40px;
+  }
 
-    @include breakpoint($breakpoint-laptop--large) {
-      margin-right: 40px;
-    }
+  &__nav {
+    margin: 0 auto;
   }
 
   &__callback {
