feat: верстка секции "география"

--- a/src/scss/abstracts/variables/_common.scss
+++ b/src/scss/abstracts/variables/_common.scss
@@ -4,3 +4,4 @@ $container-max-width: 1180px;
 // Анимации смены стилей
 $transition__text: 0.2s ease;
 $transition__icon: 0.2s ease;
+$transition__component: 0.3s ease;
