--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -1,8 +1,10 @@
 .button {
+  min-width: 180px;
+
   outline: none;
   border: none;
 
-  padding: 12px 30px;
+  padding: 13px 30px;
 
   background-color: transparent;
   border-radius: 5px;
