--- a/src/scss/abstracts/variables/_typography.scss
+++ b/src/scss/abstracts/variables/_typography.scss
@@ -10,7 +10,7 @@ $weight-ExtraBold: 800;
 $weight-Black: 900;
 
 // Размеры шрифта
-$heading-size: 36px;
+$heading-size--large: 36px;
 $heading-size--medium: 28px;
 $heading-size--small: 24px;
 
