--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -9,6 +9,8 @@ html {
 body {
   font-family: Rubik, sans-serif;
   font-variant-numeric: tabular-nums;
+  line-height: 150%;
+
   color: $text-black;
 }
 
