--- a/src/scss/abstracts/variables/_common.scss
+++ b/src/scss/abstracts/variables/_common.scss
@@ -5,3 +5,6 @@ $container-max-width: 1180px;
 $transition__text: 0.2s ease;
 $transition__icon: 0.2s ease;
 $transition__component: 0.3s ease;
+
+// Сглаживание углов
+$border-radius--medium: 5px;
