--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -7,7 +7,7 @@
   padding: 13px 30px;
 
   background-color: transparent;
-  border-radius: 5px;
+  border-radius: $border-radius--medium;
 
   cursor: pointer;
   transition: 0.15s ease;
