--- a/src/scss/components/input/_input.scss
+++ b/src/scss/components/input/_input.scss
@@ -5,7 +5,7 @@
     width: 100%;
 
     border: 1px solid $input__border;
-    border-radius: 5px;
+    border-radius: $border-radius--medium;
     outline: none;
 
     padding: 20px 15px;
