--- a/src/scss/components/section/_section.scss
+++ b/src/scss/components/section/_section.scss
@@ -1,4 +1,8 @@
 .section {
+  &:not(:last-child) {
+    margin-bottom: 90px;
+  }
+
   &__title {
     margin-bottom: 30px;
 
@@ -7,6 +11,8 @@
   }
 
   &__description {
+    margin-bottom: 30px;
+
     font-size: $text-size--large;
   }
 }
