--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -11,4 +11,5 @@
 @import "blocks/main";
 
 // Фрагметы главной страницы
-@import "pages/main/section.scss";
+@import "pages/main/map";
+@import "pages/main/order";
