--- a/src/scss/layout/common/_header.scss
+++ b/src/scss/layout/common/_header.scss
@@ -3,7 +3,15 @@
 // -----------------------------------------------------------------------------
 
 #header {
+  position: sticky;
+  z-index: $z-index-header;
+  top: 0;
+  left: 0;
+
+  // width: 100%;
   padding: 20px 0;
+
+  background-color: $section-primary;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
