--- a/src/scss/layout/pages/main/_map.scss
+++ b/src/scss/layout/pages/main/_map.scss
@@ -1,3 +1,16 @@
 // -----------------------------------------------------------------------------
 // Фрагмент стилизации какой-то секции
 // -----------------------------------------------------------------------------
+
+#map {
+
+}
+
+.map {
+  &__wrapper {
+    height: 100%;
+
+    overflow: hidden;
+    border-radius: $border-radius--medium;
+  }
+}
