--- a/src/scss/abstracts/variables/_common.scss
+++ b/src/scss/abstracts/variables/_common.scss
@@ -8,3 +8,6 @@ $transition__component: 0.3s ease;
 
 // Сглаживание углов
 $border-radius--medium: 5px;
+
+// Тени
+$shadow-primary: 0 2px 10px rgba(0, 0, 0, 0.1);
