--- a/src/scss/layout/common/_header.scss
+++ b/src/scss/layout/common/_header.scss
@@ -12,7 +12,7 @@
   padding: 20px 0;
 
   background-color: $section-primary;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: $shadow-primary;
 }
 
 .header {
