feat: верстка "Обратная связь"

--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -2,9 +2,9 @@
   min-width: 180px;
 
   outline: none;
-  border: none;
+  border: 2px solid transparent;
 
-  padding: 13px 30px;
+  padding: 16px 30px;
 
   background-color: transparent;
   border-radius: $border-radius--medium;
