--- a/src/scss/components/form/_main.scss
+++ b/src/scss/components/form/_main.scss
@@ -3,5 +3,6 @@
 // и подключение дополнительных вариаций
 // -----------------------------------------------------------------------------
 
-@import 'form';
-@import 'map';
+@import "form";
+@import "map";
+@import "callback";
