feat: верстка футера

--- a/src/scss/abstracts/variables/_color.scss
+++ b/src/scss/abstracts/variables/_color.scss
@@ -4,6 +4,7 @@ $palette-yellow: #ecd031;
 // Цветовая палитра блоков
 $section-primary: #ffffff;
 $section-secondary: #f9fcff;
+$section-footer: #232323;
 
 // Цветовая палитра текста
 $text-black: #272727;
