--- a/src/scss/components/dropdown/_dropdown.scss
+++ b/src/scss/components/dropdown/_dropdown.scss
@@ -1,9 +1,22 @@
 .dropdown {
+  position: relative;
+
   @media (hover: hover) {
-    &:hover {
+    &:not(.dropdown--open):hover {
       .dropdown__arrow {
         transform: rotate(90deg);
       }
+    }
+  }
+
+  &--open {
+    .dropdown__arrow {
+      transform: rotate(180deg);
+    }
+
+    .dropdown__content {
+      opacity: 1;
+      visibility: visible;
     }
   }
 
@@ -12,7 +25,44 @@
     margin-top: 2px;
     margin-left: 5px;
 
-
     transition: $transition__icon;
+  }
+
+  &__header {
+    cursor: pointer;
+  }
+
+  &__content {
+    position: absolute;
+    top: 75px;
+    left: 50%;
+
+    display: flex;
+    flex-direction: column;
+
+    width: 400px;
+
+    border-radius: $border-radius--medium;
+    padding: 15px;
+
+    opacity: 0;
+    visibility: hidden;
+
+    background-color: $section-primary;
+    box-shadow: $shadow-primary;
+
+    transform: translateX(-50%);
+    transition: $transition__component;
+
+    &--small {
+      width: 250px;
+    }
+  }
+
+  &__item {
+    &--sub {
+      font-size: $text-size--small;
+      color: $text-gray;
+    }
   }
 }
