feat: слайдер в главный экран

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -11,6 +11,7 @@
 @import "blocks/main";
 
 // Фрагметы главной страницы
+@import "pages/main/hero";
 @import "pages/main/map";
 @import "pages/main/order";
 @import "pages/main/useful";
