--- a/src/scss/abstracts/variables/_common.scss
+++ b/src/scss/abstracts/variables/_common.scss
@@ -9,6 +9,7 @@ $transition__image: 0.2s ease;
 
 // Сглаживание углов
 $border-radius--medium: 5px;
+$border-radius--large: 10px;
 
 // Тени
 $shadow-primary: 0 2px 10px rgba(0, 0, 0, 0.1);
