--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import "vendors/bootstrap-grid";
 @import "vendors/bootstrap-utilities";
 @import "vendors/swiper";
+@import "vendors/choices";
 
 // 4. Импорт надстроек библиотек
 @import "vendors-extended/vendor-extend";
