feat: верстка модального окна

--- a/src/scss/components/modal/_main.scss
+++ b/src/scss/components/modal/_main.scss
@@ -3,4 +3,7 @@
 // и подключение дополнительных вариаций
 // -----------------------------------------------------------------------------
 
+$modal-bg__primary: $section-primary;
+
 @import 'modal';
+@import 'callback';
