--- a/src/scss/components/input/_checkbox.scss
+++ b/src/scss/components/input/_checkbox.scss
@@ -1,16 +1,16 @@
 .checkbox {
   display: inline-flex;
-  align-items: center;
+  align-items: flex-start;
 
   &:hover &__mark {
-    border-color: #da2e2b;
+    border-color: #ecd031;
   }
 
   input {
     display: none;
 
     &:checked ~ .checkbox__mark {
-      border-color: #da2e2b;
+      border-color: #ecd031;
     }
 
     &:checked ~ .checkbox__mark::after {
@@ -24,28 +24,27 @@
 
     flex-shrink: 0;
 
-    width: 25px;
-    height: 25px;
+    width: 21px;
+    height: 21px;
 
-    margin-top: 2px;
+    margin-top: 5px;
     margin-right: 10px;
 
-    border: 2px solid #5e5e5e;
+    border: 1px solid #b9b9b9;
+    border-radius: $border-radius--medium;
 
     transition: all 0.15s ease;
     cursor: pointer;
 
     &::after {
-      content: "";
+      content: url("../img/icons/misc/check.svg");
       position: absolute;
       top: 50%;
-      left: 50%;
+      left: 60%;
 
       display: block;
-      width: 70%;
-      height: 70%;
-
-      background: #da2e2b;
+      width: 24px;
+      height: 24px;
 
       opacity: 0;
 
@@ -57,14 +56,20 @@
   &__label {
     margin-top: 2px;
 
+    font-size: $text-size--small;
+    line-height: 150%;
+
     transition: color 0.15s ease;
   }
 
   &__policy {
+    color: $text-gray;
+    text-decoration: underline;
+
     transition: color 0.15s ease;
 
     &:hover {
-      text-decoration: underline;
+      color: $text-yellow;
     }
   }
 }
