--- a/src/scss/components/modal/_modal.scss
+++ b/src/scss/components/modal/_modal.scss
@@ -16,19 +16,37 @@
 
   &__container {
     position: relative;
+    width: 100%;
+
+    border-radius: $border-radius--large;
+
+    padding: 30px;
+    background-color: $modal-bg__primary;
   }
 
   &__header {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+
+    border-bottom: 1px solid #f3f3f3;
   }
 
   &__title {
+    font-size: $heading-size--small;
+  }
+
+  &__description {
+    font-size: $text-size--medium;
   }
 
   &__close {
     position: absolute;
     z-index: 3;
-    top: 10px;
-    right: 5px;
+    top: 34px;
+    right: 30px;
+
+    width: 18px;
+    height: 18px;
 
     background-color: transparent;
     border: none;
@@ -39,8 +57,8 @@
     transition: opacity 0.15s ease;
 
     @media (hover: hover) {
-      &:hover {
-        opacity: 0.5;
+      &:hover path {
+        fill: $palette-yellow;
       }
     }
 
@@ -50,7 +68,6 @@
   }
 
   &__content {
-
   }
 
   @keyframes mmfadeIn {
