feat: тултипы и доработка модального окна

--- a/src/scss/components/input/_input.scss
+++ b/src/scss/components/input/_input.scss
@@ -12,7 +12,7 @@
     background-color: $input__background;
 
     transition: $transition__component;
-    font-size: $text-size--small;
+    font-size: $text-size--medium;
 
     &--box {
       resize: none;
@@ -32,6 +32,7 @@
 
     &::placeholder {
       color: $text-gray;
+      // font-size: $text-size--small;
     }
   }
 
