--- a/src/scss/components/input/_select.scss
+++ b/src/scss/components/input/_select.scss
@@ -6,6 +6,7 @@
 
     border-color: $input__border;
 
+    font-size: $text-size--medium;
     transition: $transition__component;
 
     &::after {
