--- a/src/scss/components/scrollbar/_scrollbar.scss
+++ b/src/scss/components/scrollbar/_scrollbar.scss
@@ -2,8 +2,8 @@
 
 .custom-scrollbar {
   &::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
+    width: 8px;
+    height: 8px;
   }
 
   &::-webkit-scrollbar-track {
@@ -12,8 +12,14 @@
 
   &::-webkit-scrollbar-thumb {
     background: $scrollbar__contoller;
-    border-radius: 10px;
-    border: 3px solid $palette-white;
+    border-radius: $border-radius--large;
+  }
+
+  &--wide {
+    &::-webkit-scrollbar {
+      width: 16px;
+      height: 12px;
+    }
   }
 }
 
