--- a/src/scss/layout/blocks/blocks/image/_image.scss
+++ b/src/scss/layout/blocks/blocks/image/_image.scss
@@ -2,6 +2,9 @@
   width: 100%;
   height: 100%;
 
+  backface-visibility: hidden;
+  transition: $transition__image;
+
   &--cover {
     object-fit: cover;
   }
