--- a/src/scss/components/input/_checkbox.scss
+++ b/src/scss/components/input/_checkbox.scss
@@ -60,6 +60,10 @@
     line-height: 150%;
 
     transition: color 0.15s ease;
+
+    @include breakpoint($breakpoint-laptop--medium) {
+      font-size: $text-size--small;
+    }
   }
 
   &__policy {
