--- a/src/scss/components/input/_input.scss
+++ b/src/scss/components/input/_input.scss
@@ -14,6 +14,10 @@
     transition: $transition__component;
     font-size: $text-size--medium;
 
+    @include breakpoint($breakpoint-laptop--medium) {
+      font-size: $text-size--small;
+    }
+
     &--box {
       resize: none;
       height: 120px;
