--- a/src/scss/layout/blocks/section/catalog/_catalog.scss
+++ b/src/scss/layout/blocks/section/catalog/_catalog.scss
@@ -34,6 +34,10 @@
     &__picture {
       height: 300px;
       overflow: hidden;
+
+      @include breakpoint($breakpoint-laptop--medium) {
+        height: 240px;
+      }
     }
 
     &__image {
@@ -56,6 +60,10 @@
     &__title {
       font-weight: $weight-Medium;
       font-size: $heading-size--small;
+
+      @include breakpoint($breakpoint-laptop--medium) {
+        font-size: $heading-size--small - 3;
+      }
     }
 
     &__link {
@@ -64,6 +72,10 @@
 
     &__description {
       font-size: $text-size--large;
+
+      @include breakpoint($breakpoint-laptop--medium) {
+        font-size: $text-size--medium;
+      }
     }
   }
 }
