--- a/src/scss/layout/pages/main/_feedback.scss
+++ b/src/scss/layout/pages/main/_feedback.scss
@@ -29,6 +29,14 @@
     padding: 20px;
   }
 
+  &__text,
+  &__footer {
+    @include breakpoint($breakpoint-laptop--medium) {
+      font-size: $text-size--small;
+      line-height: 165%;
+    }
+  }
+
   &__text {
     display: -webkit-box;
     -webkit-line-clamp: 5;
