--- a/src/scss/components/slider/_slider.scss
+++ b/src/scss/components/slider/_slider.scss
@@ -1,3 +1,7 @@
+.slider {
+  position: relative;
+}
+
 .swiper {
   &--overflow {
     overflow: initial;
@@ -6,5 +10,56 @@
   &--shadow {
     margin: -15px;
     padding: 15px;
+  }
+
+  &__control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 20px;
+  }
+
+  &-button {
+    &-prev,
+    &-next {
+      width: 50px;
+      height: 50px;
+
+      border-radius: $border-radius--medium;
+      background-color: $palette-yellow;
+
+      transition: $transition__component;
+
+      outline: none;
+
+      @include breakpoint($breakpoint-laptop--large) {
+        position: static;
+        margin-top: 0;
+      }
+
+      &::after {
+        color: #ffffff;
+        font-size: 24px;
+      }
+
+      @media (hover: hover) {
+        &:hover {
+          opacity: 0.6;
+        }
+      }
+    }
+
+    &-prev {
+      left: -70px;
+
+      @include breakpoint($breakpoint-laptop--large) {
+        margin-right: 90px;
+      }
+    }
+
+    &-next {
+      right: -70px;
+    }
   }
 }
