feat: переработка главного экрана и доработка верстки

--- a/src/scss/components/section/_section.scss
+++ b/src/scss/components/section/_section.scss
@@ -30,6 +30,10 @@ $margin: 30px;
     @include breakpoint($breakpoint-laptop--medium) {
       font-size: $heading-size--small;
     }
+
+    span {
+      color: $text-yellow;
+    }
   }
 
   &__description {
