--- a/src/scss/layout/pages/main/_hero.scss
+++ b/src/scss/layout/pages/main/_hero.scss
@@ -1,13 +1,42 @@
 #hero {
+  position: relative;
+  padding: 30px;
 
+  background-image: url("../img/page/main/hero/background.svg");
+  background-size: 100%;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+
+    background: linear-gradient(0deg, #ffffff 20%, rgba(255, 255, 255, 0) 100%);
+  }
 }
 
 .hero {
+  &__content {
+    padding: 45px 0;
+  }
+
+  &__title {
+  }
+
+  &__subtitle {
+  }
+
+  &__slider {
+    height: 100%;
+  }
+
   &__picture {
-    height: 400px;
+    height: 480px;
+    overflow: hidden;
   }
 
   &__image {
-
   }
 }
