fix: исправления для квадратных мониторов

--- a/src/scss/layout/common/_page.scss
+++ b/src/scss/layout/common/_page.scss
@@ -3,5 +3,9 @@
     font-size: $heading-size--large;
     font-weight: $weight-Bold;
     line-height: 120%;
+
+    @include breakpoint($breakpoint-laptop--large) {
+      font-size: $heading-size--large - 4;
+    }
   }
 }
