--- a/src/scss/layout/pages/main/_hero.scss
+++ b/src/scss/layout/pages/main/_hero.scss
@@ -33,8 +33,9 @@
   }
 
   &__picture {
-    height: 480px;
+    height: 100%;
     overflow: hidden;
+    border-radius: $border-radius--medium;
   }
 
   &__image {
