--- a/src/scss/components/slider/_hero.scss
+++ b/src/scss/components/slider/_hero.scss
@@ -1,4 +1,8 @@
 .slider-hero {
-  height: 100%;
+  height: 480px;
   border-radius: $border-radius--medium;
+
+  @include breakpoint($breakpoint-laptop--large) {
+    height: 440px;
+  }
 }
