--- a/src/scss/layout/blocks/blocks/logo/_logo.scss
+++ b/src/scss/layout/blocks/blocks/logo/_logo.scss
@@ -1,15 +1,19 @@
 .logo {
+  transition: $transition__icon;
+
   &__image {
     width: 100%;
   }
 
+  @media (hover: hover) {
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
   &--header {
     .logo__image {
-      max-width: 160px;
-
-      //@include breakpoint($breakpoint-laptop--large) {
-      //  max-width: 130px;
-      //}
+      max-width: 180px;
     }
   }
 
