feat: верстка мобильного меню

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -4,6 +4,7 @@
 @import "accordion/main";
 @import "button/main";
 @import "dropdown/main";
+@import "effect/main";
 @import "form/main";
 @import "input/main";
 @import "lazyload/main";
