--- a/src/scss/layout/blocks/blocks/logo/_logo.scss
+++ b/src/scss/layout/blocks/blocks/logo/_logo.scss
@@ -14,6 +14,10 @@
   &--header {
     .logo__image {
       max-width: 180px;
+
+      @include breakpoint($breakpoint-mobile--large) {
+        max-width: 140px;
+      }
     }
   }
 
