--- a/src/scss/layout/common/_mobile-menu.scss
+++ b/src/scss/layout/common/_mobile-menu.scss
@@ -18,7 +18,7 @@
       visibility: visible;
     }
 
-    .mobile-menu__wrapper {
+    .mobile-menu__container {
       top: 0;
     }
   }
@@ -34,10 +34,19 @@
     transition: 0.3s ease;
   }
 
-  &__wrapper {
+  &__container {
     position: absolute;
     top: -100%;
     left: 0;
+
+    width: 100%;
+
+    background-color: #ffffff;
+    transition: 0.3s ease-out;
+  }
+
+  &__wrapper {
+    position: relative;
 
     width: 100%;
     height: 100%;
@@ -45,11 +54,7 @@
 
     overflow: auto;
 
-    padding: 100px 30px 40px 30px;
-
-    background-color: #ffffff;
-
-    transition: 0.5s ease-out;
+    padding: 90px 30px 40px 30px;
   }
 
   &__button {
