--- a/src/scss/layout/common/_nav.scss
+++ b/src/scss/layout/common/_nav.scss
@@ -34,6 +34,24 @@
     }
   }
 
+  &--mobile {
+    .nav__list {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .nav__item--small {
+      .nav__link {
+        font-size: $text-size--medium;
+        color: $text-gray;
+      }
+    }
+
+    .nav__link {
+      font-size: $text-size--large;
+    }
+  }
+
   &--footer {
     .nav__list {
       flex-direction: column;
