--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import "vendors/bootstrap-utilities";
 @import "vendors/swiper";
 @import "vendors/choices";
+@import "vendors/handorgel";
 
 // 4. Импорт надстроек библиотек
 @import "vendors-extended/vendor-extend";
