--- a/src/scss/layout/blocks/blocks/logo/_logo.scss
+++ b/src/scss/layout/blocks/blocks/logo/_logo.scss
@@ -25,6 +25,10 @@
     .logo__image {
       max-width: 200px;
       margin: 0 auto;
+
+      @include breakpoint($breakpoint-mobile--large) {
+        max-width: 160px;
+      }
     }
   }
 }
