--- a/src/scss/layout/pages/main/_order.scss
+++ b/src/scss/layout/pages/main/_order.scss
@@ -18,6 +18,10 @@
     overflow: hidden;
 
     border-radius: $border-radius--medium;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      height: 180px;
+    }
   }
 
   &__image {
