--- a/src/scss/components/slider/_useful.scss
+++ b/src/scss/components/slider/_useful.scss
@@ -1,5 +1,9 @@
 .slider-useful {
   .swiper-slide {
     height: initial;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      width: 80%;
+    }
   }
 }
