--- a/src/scss/layout/pages/main/_feedback.scss
+++ b/src/scss/layout/pages/main/_feedback.scss
@@ -2,6 +2,12 @@
 }
 
 .feedback {
+  .swiper__control {
+    @include breakpoint($breakpoint-mobile--large) {
+      display: none;
+    }
+  }
+
   &__card {
     display: flex;
     height: 100%;
@@ -16,6 +22,10 @@
   &__picture {
     width: 35%;
     padding: 15px;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      display: none;
+    }
   }
 
   &__image {
@@ -27,6 +37,10 @@
 
     width: 65%;
     padding: 20px;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      width: 100%;
+    }
   }
 
   &__text,
