feat: ленивая загрузка для изображений и карты

--- a/src/scss/components/lazyload/_lazyload.scss
+++ b/src/scss/components/lazyload/_lazyload.scss
@@ -1,4 +1,5 @@
 .lazy {
+  visibility: hidden;
   transition: 0.2s ease;
 }
 
@@ -7,5 +8,5 @@
 }
 
 .loaded {
-  opacity: 1;
+  visibility: visible;
 }
