fix: исправлено отображение карты

--- a/src/scss/components/lazyload/_lazyload.scss
+++ b/src/scss/components/lazyload/_lazyload.scss
@@ -1,5 +1,4 @@
 .lazy {
-  visibility: hidden;
   transition: 0.2s ease;
 }
 
@@ -8,5 +7,5 @@
 }
 
 .loaded {
-  visibility: visible;
+  visibility: visible !important;
 }
