--- a/src/scss/components/slider/_hero.scss
+++ b/src/scss/components/slider/_hero.scss
@@ -5,4 +5,8 @@
   @include breakpoint($breakpoint-laptop--large) {
     height: 440px;
   }
+
+  @include breakpoint($breakpoint-mobile--large) {
+    height: 150px;
+  }
 }
