--- a/src/scss/layout/blocks/section/catalog/_catalog.scss
+++ b/src/scss/layout/blocks/section/catalog/_catalog.scss
@@ -38,6 +38,10 @@
       @include breakpoint($breakpoint-laptop--medium) {
         height: 240px;
       }
+
+      @include breakpoint($breakpoint-mobile--large) {
+        height: 170px;
+      }
     }
 
     &__image {
@@ -46,7 +50,7 @@
     &__content {
       width: 100%;
 
-      padding: 20px;
+      padding: 15px;
 
       background: $section-primary;
     }
@@ -55,6 +59,11 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+
+      @include breakpoint($breakpoint-mobile--large) {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
 
     &__title {
@@ -63,6 +72,10 @@
 
       @include breakpoint($breakpoint-laptop--medium) {
         font-size: $heading-size--small - 3;
+      }
+
+      @include breakpoint($breakpoint-mobile--large) {
+        font-size: $text-size--large;
       }
     }
 
