--- a/src/scss/layout/common/_page.scss
+++ b/src/scss/layout/common/_page.scss
@@ -7,5 +7,13 @@
     @include breakpoint($breakpoint-laptop--large) {
       font-size: $heading-size--large - 4;
     }
+
+    @include breakpoint($breakpoint-mobile--large) {
+      font-size: $heading-size--small - 3;
+    }
+
+    @include breakpoint($breakpoint-mobile) {
+      font-size: $heading-size--small - 6;
+    }
   }
 }
