--- a/src/scss/layout/pages/main/_hero.scss
+++ b/src/scss/layout/pages/main/_hero.scss
@@ -6,7 +6,7 @@
   background-size: 100%;
 
   @include breakpoint($breakpoint-mobile--large) {
-    margin-bottom: 0;
+    margin-bottom: 20px;
     padding: 0;
     background-size: 200%;
   }
@@ -22,7 +22,7 @@
     background: linear-gradient(0deg, #ffffff 20%, rgba(255, 255, 255, 0) 100%);
 
     @include breakpoint($breakpoint-mobile--large) {
-      display: none;
+      height: 50px;
     }
   }
 }
