feat: перенос на локальный сервер + доработка футера

--- a/src/scss/layout/common/_footer.scss
+++ b/src/scss/layout/common/_footer.scss
@@ -73,9 +73,13 @@
   }
 
   &__company {
+    white-space: nowrap;
+
     @include breakpoint($breakpoint-mobile--large) {
       margin-top: 30px;
       text-align: center;
+
+      white-space: normal;
     }
   }
 
