feat: верстка "виды полотна"

--- a/src/scss/layout/pages/mosquito/_constuction.scss
+++ b/src/scss/layout/pages/mosquito/_constuction.scss
@@ -33,7 +33,9 @@
   &__price {
     display: block;
     margin-bottom: 10px;
+
     color: $text-gray;
+    font-size: $text-size--small;
   }
 
   &__description {
