feat: секция "Варианты установки" и рефакторинг

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -22,3 +22,4 @@
 @import "pages/mosquito/hero";
 @import "pages/mosquito/constuction";
 @import "pages/mosquito/material";
+@import "pages/mosquito/usage";
