feat: переработка карточек материала и полотна

--- a/src/scss/components/slider/_constuction.scss
+++ b/src/scss/components/slider/_constuction.scss
@@ -1,5 +1,9 @@
 .slider-constuction {
   .swiper-slide {
     height: initial;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      width: 80%;
+    }
   }
 }
