--- a/src/scss/abstracts/variables/_common.scss
+++ b/src/scss/abstracts/variables/_common.scss
@@ -13,3 +13,6 @@ $border-radius--large: 10px;
 
 // Тени
 $shadow-primary: 0 2px 10px rgba(0, 0, 0, 0.1);
+
+// Бордер
+$border-primary: 1px solid #f3f3f3;
