feat: страница блога

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -23,3 +23,6 @@
 @import "pages/mosquito/constuction";
 @import "pages/mosquito/material";
 @import "pages/mosquito/usage";
+
+@import "pages/blog/blog";
+@import "pages/blog/blog-card";
