fix: отступ сверху

--- a/src/scss/layout/pages/blog/_blog.scss
+++ b/src/scss/layout/pages/blog/_blog.scss
@@ -1,9 +1,12 @@
 #blog {
   padding-top: 30px;
+
+  @include breakpoint($breakpoint-mobile--large) {
+    padding-top: 15px;
+  }
 }
 
 .blog {
   &__card {
-
   }
 }
