--- a/src/scss/layout/blocks/section/calculator/_calculator.scss
+++ b/src/scss/layout/blocks/section/calculator/_calculator.scss
@@ -1,4 +1,11 @@
 #calculator {
+  margin-top: -120px;
+  padding-top: 120px;
+
+  @include breakpoint($breakpoint-mobile--large) {
+    margin-top: -90px;
+    padding-top: 90px;
+  }
 }
 
 .calculator {
